[gd_scene load_steps=10 format=2]

[ext_resource path="res://Characters/NPC/states/motion/in_air/jump.gd" type="Script" id=1]
[ext_resource path="res://Characters/NPC/NPC_state_machine.gd" type="Script" id=2]
[ext_resource path="res://Characters/NPC/NPC.gd" type="Script" id=3]
[ext_resource path="res://Characters/NPC/states/motion/on_ground/move.gd" type="Script" id=4]
[ext_resource path="res://Characters/Robot/assets/$Robot_Suit.png" type="Texture" id=5]
[ext_resource path="res://Characters/NPC/states/motion/on_ground/idle.gd" type="Script" id=6]
[ext_resource path="res://Characters/NPC/states/motion/on_ground/attack.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.6627, 11.7296 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 111.237, 114.544 )

[node name="Robot" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
START_STATE = NodePath("../../Robot/StateMachine/Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.60065 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DialogArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogArea"]
shape = SubResource( 2 )
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Attack" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Jump" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="DialogArea" to="." method="_on_DialogArea_body_entered"]
